# rust-phonenumber

./: Cargo.toml  README.md  build.rs
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  check.yml
assets/: update.sh
benches/: init.rs  parsing.rs
examples/: test.rs
phonenumber/: Cargo.toml
phonenumber-metadata/: Cargo.toml  build.rs
phonenumber-metadata-loader/: Cargo.toml
phonenumber-metadata-loader/src/: error.rs  lib.rs
phonenumber-metadata/src/: database.rs  descriptor.rs  error.rs  lib.rs  metadata.rs
phonenumber/benches/: parsing.rs
phonenumber/src/: consts.rs  error.rs  lib.rs  phone_number.rs  validator.rs
phonenumber/src/parser/: helper.rs  mod.rs  natural.rs  rfc3966.rs
src/: carrier.rs  carrier_mapper.rs  consts.rs  country.rs  country_code.rs  error.rs  extension.rs  formatter.rs  helper.rs  lib.rs  national_number.rs  phone_number.rs  validator.rs
src/metadata/: database.rs  descriptor.rs  format.rs  loader.rs  metadata.rs  mod.rs
src/parser/: consts.rs  helper.rs  mod.rs  natural.rs  rfc3601.rs  rfc3966.rs  rfc3986.rs  rfc4715.rs  rfc4904.rs  valid.rs
tests/: advisories.rs  concurrency.rs  prop.proptest-regressions  prop.rs
