[package]
name = "phonenumber"
version = "0.3.3+8.13.9"
edition = "2021"
rust-version = "1.62"  # because of Sailfish OS

authors = ["Gabriel Féron <g@leirbag.net>", "Ruben De Smet <ruben.de.smet@rubdos.be>", "meh. <meh@1aim.com>"]
license = "Apache-2.0"

description = "Library for parsing, formatting and validating international phone numbers."
repository = "https://github.com/whisperfish/rust-phonenumber"
keywords = ["phonenumber", "phone", "number", "parser", "formatter"]
readme = "README.md"

[dependencies]
bincode = "1.3"
either = "1.0"
fnv = "1.0"
itertools = "0.2"
nom = "7.0"
once_cell = "1.0"
quick-xml = "0.24"
regex = "<=1.9"  # latest for rust 1.62
regex-cache = "<=0.1"  # latest for rust 1.62
serde = "1.0"
serde_derive = "1.0"
strum = { version = "0.16", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
bincode = "1.3"
quick-xml = "0.24"
regex = "<=1.9"  # latest for rust 1.62
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"

[dev-dependencies]
doc-comment = "0.1"
rstest = "0.18"
rstest_reuse = "0.6"
anyhow = "1"
