[package]
name = "phonenumber"
version = "0.3.6+8.13.36"
edition = "2021"
rust-version = "1.58.0"

authors = ["Gabriel Féron <g@leirbag.net>", "Ruben De Smet <ruben.de.smet@rubdos.be>", "meh. <meh@1aim.com>"]
license = "Apache-2.0"

description = "Library for parsing, formatting and validating international phone numbers."
repository = "https://github.com/whisperfish/rust-phonenumber"
keywords = ["phonenumber", "phone", "number", "parser", "formatter"]
readme = "README.md"

[dependencies]
bincode = "1.3"
either = "1.11"
fnv = "1"
once_cell = "1"
nom = "7.1"
quick-xml = ">=0.28, <= 0.31"
regex = "1.7"
regex-cache = "0.2"
serde = "1.0"
serde_derive = "1.0"
strum = { version = ">=0.24, <=0.26", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
bincode = "1.3"
quick-xml = ">=0.28, <=0.31"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
criterion = ">=0.4, <=0.5"
doc-comment = "0.3"
rstest = ">= 0.13, <=0.19"
rstest_reuse = "0.6"
proptest = "1.0.0"

[[bench]]
name = "parsing"
harness = false
