[package]
name = "phonenumber"
version = "0.3.9+9.0.21"
edition = "2021"
rust-version = "1.76.0"

authors = ["Gabriel Féron <g@leirbag.net>", "Ruben De Smet <ruben.de.smet@rubdos.be>", "meh. <meh@1aim.com>"]
license = "Apache-2.0"

description = "Library for parsing, formatting and validating international phone numbers."
repository = "https://github.com/whisperfish/rust-phonenumber"
keywords = ["phonenumber", "phone", "number", "parser", "formatter"]
readme = "README.md"

[dependencies]
either = "1.11"
fnv = "1"
once_cell = "1"
nom = "7.1"
postcard = "1.1"
quick-xml = ">=0.28, <= 0.38"
regex = "1.7"
regex-cache = "0.2"
serde = "1.0"
serde_derive = "1.0"
strum = { version = ">=0.24, <=0.27", features = ["derive"] }
thiserror = "2.0"

[build-dependencies]
postcard = { version = "1.1", features = ["use-std"] }
quick-xml = ">=0.28, <=0.38"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
thiserror = "2.0"

[dev-dependencies]
anyhow = "1"
criterion = ">=0.4, <=0.5"
doc-comment = "0.3"
rstest = "0.26"
rstest_reuse = "0.7"
proptest = "1.0.0"

[[bench]]
name = "parsing"
harness = false
