[package]
name = "phonenumber-metadata-loader"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
license = "Apache-2.0"

description = "Metadata loading for rust-phonenumber"

[dependencies]
fnv = "1"
quick-xml = ">=0.28, <=0.40"
serde = "1.0"
serde_derive = "1.0"
thiserror = "2.0"
regex = "1.7"

[dev-dependencies]
