[package]
name = "phonenumber-metadata"
version = "0.1.0+9.0.21"
edition = "2021"
rust-version = "1.76.0"
license = "Apache-2.0"

description = "Metadata structures for rust-phonenumber"

[dependencies]
phonenumber-metadata-loader = { path = "../phonenumber-metadata-loader" }

postcard = "1.1"
once_cell = "1"
fnv = "1"
quick-xml = ">=0.28, <=0.40"
serde = "1.0"
serde_derive = "1.0"
thiserror = "2.0"
regex = "1.7"

[dev-dependencies]

[build-dependencies]
postcard = { version = "1.1", features = ["use-std"] }
phonenumber-metadata-loader = { path = "../phonenumber-metadata-loader", version = "0.1.0" }
